--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       src: url('https://gcore.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/MapoGoldenPierA.woff') format('woff');
       font-weight: normal;
       font-style: normal;
+      letter-spacing: -2px;
     }
 
     html,
