--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       src: url('https://gcore.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/MapoGoldenPierA.woff') format('woff');
       font-weight: normal;
       font-style: normal;
-      letter-spacing: -2px;
+      letter-spacing: -5px;
     }
 
     html,
@@ -101,11 +101,10 @@
 
     <script>
       const poems = [
-        `사라지고 있는 것은 대체 무엇인가? 바로 시이다. 살아 있는 움직이는 시. 파고 파내도 끝이 없는 이야기. 이야기와 동물과 시이다. 세 가지 단어이지만, 하나라고 볼 수도 있다. 동물이야말로 가장 생태적으로 함축적인 존재이기 때문이다. 그리고 살아 있는 일 분, 일 초마다 이야기가 피어나오기 때문이다. 말과 말들에서 발췌한 김산하의 절멸 중`,
-        `좋아, 하지만 당신 자신도 이건 악순환이라는 걸 인정해야 할 거야. 돌이킬 수 없는 일은 모두 위대해. 죽음과 첫사랑과 동정의 상실과 기타 등등 그런 종류의 일들이 위대한 이유는 오로지 그 때문이야. 몇 번씩 되풀이할 수 있는 일은 모두 그로 인해서 좀스러워지는 거야. (구름 사이로 약한 달빛의 반짝임이 눈에 띄기 시작한다.) 당신은 돌이킬 수 없는 일은 아무것도 하지 않으려고 하면서 위대함을 원하잖아. 말과 말들에서 발췌한 스타니스와프 이그나찌 비트키에비치의 쇠물닭 중`,
-        `이 모든 것은 여담일 뿐, 내 정신이 오락가락한다고 생각하지는 않았으면 좋겠다. 내 정신은 오락가락하지만 내가 바라는 것 이상으로 그러지는 않는다.\n\n 말과 말들에서 발췌한 리어노라 캐링턴의 귀나팔`,
+        `사라지고 있는 것은 대체 무엇인가? 바로 시이다. 살아 있는 움직이는 시. 파고 파내도 끝이 없는 이야기. 이야기와 동물과 시이다. 세 가지 단어이지만, 하나라고 볼 수도 있다. 동물이야말로 가장 생태적으로 함축적인 존재이기 때문이다. 그리고 살아 있는 일 분, 일 초마다 이야기가 피어나오기 때문이다. 김산하의 절멸 중`,
         `의미 없는 노성을 토하며 두억시니들은 끊임없이 두 손으로, 혹 손이 없을 경우에는 입으로 물을 머금어 강물을 ‘파내었다.’ 당연한 일이지만 같은 부피의 흙에 대해서라면 소용이 있었을 그 방법도 거세게 흐르는 급류에는 아무런 영향을 끼치지 못하고 있었다. 두억시니들은 아무리 퍼내어도 줄어들지 않는 강물에 난처해하고 분노했다. 그러나 두억시니는 그 짓을 멈추지 않았다. 수백의 두억시니가 강변에 몰려서서 강물을 퍼내고 있었고 그보다 많은 두억시니들이 그들의 배후에서 의미를 빚지 못하는 단어들로 주위를 소란스럽게 만들고 있었다. 무익한 목적에 바쳐진 과도한 노고가 자아내는 것은 웃음이나 슬픔뿐이다. \n\n김영도의 눈물을 마시는새 중`,
-        `네 발바닥 즐거운! 푸르다! 손! 밤! 아홉의 오른쪽 물거품! 심심한 장미를 콧구멍에-! 딱딱하게 끊는 망치 바르면! \n\n김영도의 눈물을 마시는새 중 두억시니의 대사 모음`
+        `네 발바닥 즐거운! 푸르다! 손! 밤! 아홉의 오른쪽 물거품! 심심한 장미를 콧구멍에-! 딱딱하게 끊는 망치 바르면! \n\n김영도의 눈물을 마시는새 중 두억시니의 대사 모음`,
+        `두억시니는 소설 눈물을 마시는 새에 등장하는 이치에 맞지 않는 육체와 공백으로 얼룩진 정신을 가진 종족이다. 이 신을 잃은 종족은 정신적으로 모두 연결되어 있으며 스스로를 ‘나’들이라고 지칭한다. 이 글을 쓴 글쓴이와 낭독을 하는 독자는 글을 통해 두억시니같은 ‘나’들이 된다. 글쓴이의 말`
       ];
 
       const selectedPoem = poems[Math.floor(Math.random() * poems.length)];
