--- a/index.html
+++ b/index.html
@@ -55,7 +55,14 @@
 
     .bit-space {
       color: transparent;
+      position: relative;
       cursor: help;
+    }
+
+    .bit-space::after {
+      content: " ";
+      position: absolute;
+      color: rgba(0, 0, 0, 0);
     }
   </style>
 </head>
@@ -73,18 +80,15 @@
       `무거운 해 늙어 태어나면 개나리 웃지요`,
       `크낙새 뿌리 무침? 파란 냄새 삼각형!`,
       `팔짝 뛰는 토끼색 칠한 재채기 세 쌍만 던져!`,
-      `두억시니는 소설 눈물을 마시는 새에 등장하는 신을 잃은 종족이다. 이 종족은 이치에 맞지 않는 육체와 공백으로 얼룩진 정신을 가졌다. 종족 모두는 정신적으로 연결되었으며 스스로를 ‘나’들이라고 지칭한다. ‘의미를 빚지 못한 단어들로 이루어진’ 문장은 두억시니의 대사들이다. 문장을 쓴 글쓴이와 문장을 낭독을 하는 화자이자 독자는 문장을 통해 두억시니같은 ‘나’들이 된다. \n메타공백의 글쓴이 생각`,
+      `‘의미를 빚지 못한 단어로 이루어진’ 글들은 두억시니의 말이다. 두억시니는 소설 ‘눈물을 마시는 새’에 등장하는 신을 잃은 종족이다. 이 종족은 이치에 어긋난 육체와 공백으로 얼룩진 정신을 가졌다. 종족 모두의 정신은 서로 연결되었으며 스스로를 ‘나’들이라고 지칭한다. 소설 속 두억시니처럼 본 글을 쓴 글쓴이와 글을 낭독을 하는 화자이자 독자는 의미를 빚지 못하는 글을 통해 두억시니같은 ‘나’들이 된다. \n메타공백의 글쓴이 생각`,
     ];
 
-    // 보여준 인덱스 목록을 가져오기
     let shownIndexes = JSON.parse(localStorage.getItem('shownPoemIndexes')) || [];
 
-    // 모든 시를 다 보여줬으면 초기화
     if (shownIndexes.length >= poems.length) {
       shownIndexes = [];
     }
 
-    // 남은 시 중에서 랜덤 선택
     const availableIndexes = poems.map((_, i) => i).filter(i => !shownIndexes.includes(i));
     const randomIndex = availableIndexes[Math.floor(Math.random() * availableIndexes.length)];
     shownIndexes.push(randomIndex);
@@ -112,9 +116,10 @@
       return {
         isSpace: true,
         hex,
-        html: `<span class="bit-space" title="hex: ${hex}" style="font-size:${SPACE_FONT_SIZE};">${char}</span>`
+        html: `<span class="bit-space space-${hex}" title="hex: ${hex}">${char}</span>`
       };
     }
+
 
     function updateDisplay() {
       output.innerHTML = displayChars.map(obj => {
