--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     body {
       font-family: 'MapoGoldenPier', 'Noto Sans KR', sans-serif;
-      background: #f0f0f0;
+      background: #ffffff;
       display: flex;
       justify-content: center;
     }
