--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
     let isAllBlurred = false;
 
     const poems = [
-      `의미 없는 노성을 토하며 두억시니들은 끊임없이 두 손으로, 혹 손이 없을 경우에는 입으로 물을 머금어 강물을 ‘파내었다.’ 당연한 일이지만 같은 부피의 흙에 대해서라면 소용이 있었을 그 방법도 거세게 흐르는 급류에는 아무런 영향을 끼치지 못하고 있었다.두억시니들은 아무리 퍼내어도 줄어들지 않는 강물에 난처해하고 분노했다. 그러나 두억시니는 그 짓을 멈추지 않았다. 수백의 두억시니가 강변에 몰려서서 강물을 퍼내고 있었고 그보다 많은 두억시니들이 그들의 배후에서 의미를 빚지 못하는 단어들로 주위를 소란스럽게 만들고 있었다. 무익한 목적에 바쳐진 과도한 노고가 자아내는 것은 웃음이나 슬픔뿐이다.\n이영도의 눈물을 마시는 새 중 발췌`,
+      `“의미 없는 노성을 토하며 두억시니들은 끊임없이 두 손으로, 혹 손이 없을 경우에는 입으로 물을 머금어 강물을 ‘파내었다.’ 당연한 일이지만 같은 부피의 흙에 대해서라면 소용이 있었을 그 방법도 거세게 흐르는 급류에는 아무런 영향을 끼치지 못하고 있었다.두억시니들은 아무리 퍼내어도 줄어들지 않는 강물에 난처해하고 분노했다. 그러나 두억시니는 그 짓을 멈추지 않았다. 수백의 두억시니가 강변에 몰려서서 강물을 퍼내고 있었고 그보다 많은 두억시니들이 그들의 배후에서 의미를 빚지 못하는 단어들로 주위를 소란스럽게 만들고 있었다. 무익한 목적에 바쳐진 과도한 노고가 자아내는 것은 웃음이나 슬픔뿐이다.” \n이영도의 ‘눈물을 마시는 새’ 중 발췌`,
       `네 발바닥 즐거운! 푸르다! 손! 밤! 아홉의 오른쪽 물거품!  `,
       `심심한 장미를 콧구멍에-!  `,
       `딱딱하게 끊는 망치 바르면!  `,
       `무거운 해 늙어 태어나면 개나리 웃지요.  `,
       `크낙새 뿌리 무침? 파란 냄새 삼각형!  `,
       `팔짝 뛰는 토끼색 칠한 재채기 세 쌍만 던져!  `,
-      `“의미를 빚지 못한 단어로 이루어진” 글들은 두억시니의 대사이다. 두억시니는 소설 ‘눈물을 마시는 새’에 등장하는 신을 잃은 종족이다. 이 종족은 이치에 어긋난 육체와 공백으로 얼룩진 정신을 가졌다. 두억시니 모두의 정신은 서로 연결되었으며 스스로를 ‘나’들이라고 지칭한다. 소설 속 두억시니처럼 본 글을 쓴 글쓴이와 글을 낭독을 하는 화자이자 독자는 의미를 되지 못한 글을 통해 두억시니같은 ‘나’들이 된다. \n메타공백의 글쓴이 생각`,
+      `‘의미를 빚지 못한 단어로 이루어진’ 글들은 소설 ‘눈물을 마시는 새’에 등장하는 두억시니의 대사이다. 소설 속 두억시니는 신을 잃은 종족이다. 이 종족은 이치에 어긋난 육체와 공백으로 얼룩진 정신을 가졌다. 두억시니 모두의 정신은 서로 연결되었으며 스스로를 ‘나’들이라고 지칭한다. 이 글을 쓴 글쓴이와 글을 낭독을 하는 화자이자 독자는 의미를 되지 못한 글을 통해 두억시니같은 ‘나’들이 된다.” \n메타공백의 글쓴이 생각`,
     ];
     let shown = JSON.parse(localStorage.getItem('shownPoemIndexes')) || [];
     if (shown.length >= poems.length) shown = [];
