--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       `무거운 해 늙어 태어나면 개나리 웃지요.  `,
       `크낙새 뿌리 무침? 파란 냄새 삼각형!  `,
       `팔짝 뛰는 토끼색 칠한 재채기 세 쌍만 던져!  `,
-      `‘의미를 빚지 못한 단어로 이루어진’ 글들은 소설 ‘눈물을 마시는 새’에 등장하는 두억시니의 대사이다. 소설 속 두억시니는 신을 잃은 종족이다. 이 종족은 이치에 어긋난 육체와 공백으로 얼룩진 정신을 가졌다. 두억시니 모두의 정신은 서로 연결되었으며 스스로를 ‘나’들이라고 지칭한다. 이 글을 쓴 글쓴이와 글을 낭독을 하는 화자이자 독자는 의미를 되지 못한 글을 통해 두억시니같은 ‘나’들이 된다.” \n메타공백의 글쓴이 생각`,
+      `‘의미를 빚지 못한 단어로 이루어진’ 글들은 소설 ‘눈물을 마시는 새’에 등장하는 두억시니의 대사이다. 소설 속 두억시니는 신을 잃은 종족이다. 이 종족은 이치에 어긋난 육체와 공백으로 얼룩진 정신을 가졌다. 두억시니 모두의 정신은 서로 연결되었으며 스스로를 ‘나’들이라고 지칭한다. 이 글을 쓴 글쓴이와 글을 낭독을 하는 화자이자 독자는 의미를 되지 못한 글을 통해 두억시니같은 ‘나’들이 된다. \n메타공백의 글쓴이 생각`,
     ];
     let shown = JSON.parse(localStorage.getItem('shownPoemIndexes')) || [];
     if (shown.length >= poems.length) shown = [];
